# glamira_dbt

./: .gitignore  .user.yml  README.md  dbt_project.yml  profiles.yml  pyproject.toml
macros/: generate_surrogate_key.sql  get_default_dimension_row.sql
models/core/: dim_customer.sql  dim_device.sql  dim_location.sql  dim_product.sql  dim_store.sql  schema.yml
models/mart/: dim_date.sql  fact_sales_order.sql  schema.yml
models/staging/: schema.yml  sources.yml  stg_raw_events.sql
