[project]
name = "glamira-dbt"
version = "1.0.0"
description = "Glamira dbt project for BigQuery"
authors = [{name = "hoanghiep8401", email = "hoanghiep8401@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["dbt-bigquery>=1.11.0,<2.0.0"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
